Created partials for CSS

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -360,3 +360,16 @@ textarea {
 /* =============
     Footer
 ============= */
+/* =============
+    Heros
+============= */
+/* -------- Hero 2 ----------*/
+/* =============
+    About
+============= */
+/* =============
+    Partners
+============= */
+/* =============
+    Request
+============= */
