--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -19,3 +19,7 @@
 @import "layout/_footer";
 
 // Sections Styles
+@import "sections/_heros";
+@import "sections/_about";
+@import "sections/_partners";
+@import "sections/_request";
