--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -327,6 +327,10 @@ template {
 /* =============
     Base
 ============= */
+img {
+  width: 100%;
+}
+
 /* =============
     Typography
 ============= */
@@ -357,6 +361,10 @@ textarea {
 /* =============
     Header
 ============= */
+header {
+  background-color: red;
+}
+
 /* =============
     Footer
 ============= */
