--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -3,5 +3,12 @@
 ============= */
 
 header {
-background-color: red;
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    background-color: red;
+    grid-template-areas: ". header .";
+
+    >div{
+        grid-area: header;
+    }
 }
