--- a/dev/scss/sections/_about.scss
+++ b/dev/scss/sections/_about.scss
@@ -3,5 +3,11 @@
 ============= */
 
 #about{
-    
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas: ". about .";
+
+    >div{
+        grid-area: about;
+    }
 }
