--- a/dev/scss/sections/_partners.scss
+++ b/dev/scss/sections/_partners.scss
@@ -2,6 +2,12 @@
     Partners
 ============= */
 
-#partners {
+#partners{
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas: ". partners .";
 
+    >div{
+        grid-area: partners;
+    }
 }
