--- a/dev/scss/sections/_about.scss
+++ b/dev/scss/sections/_about.scss
@@ -4,8 +4,12 @@
 
 #about{
     display: grid;
-    grid-template-columns: 17px auto 17px;
+    grid-template-columns: 16px auto 16px;
     grid-template-areas: ". about .";
+
+    @include md{
+        grid-template-columns: 12% auto 12%;
+    }
 
     >div{
         grid-area: about;
