--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -385,6 +385,11 @@ textarea {
   grid-template-columns: 16px auto 16px;
   grid-template-areas: ". about .";
 }
+@media (min-width: 768px) {
+  #about {
+    grid-template-columns: 12% auto 12%;
+  }
+}
 #about > div {
   grid-area: about;
 }
@@ -400,6 +405,23 @@ textarea {
 #partners > div {
   grid-area: partners;
 }
+#partners ul {
+  margin: 0;
+  padding: 0;
+  display: grid;
+  gap: 16px;
+}
+@media (min-width: 768px) {
+  #partners ul {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+#partners li {
+  background-color: gainsboro;
+  list-style: none;
+  padding: 100px 0;
+  text-align: center;
+}
 
 /* =============
     Request
@@ -408,6 +430,11 @@ textarea {
   display: grid;
   grid-template-columns: 16px auto 16px;
   grid-template-areas: ". request .";
+}
+@media (min-width: 768px) {
+  #request {
+    grid-template-columns: 12% auto 12%;
+  }
 }
 #request > div {
   grid-area: request;
