--- a/dev/scss/sections/_partners.scss
+++ b/dev/scss/sections/_partners.scss
@@ -7,6 +7,10 @@
     grid-template-columns: 16px auto 16px;
     grid-template-areas: ". partners .";
 
+    @include xxl{
+        grid-template-columns: auto 1440px auto;
+    }
+    
     div{
         grid-area: partners;
 
@@ -59,6 +63,7 @@
 
             }
 
+          
 
             
         }
