--- a/dev/scss/sections/_about.scss
+++ b/dev/scss/sections/_about.scss
@@ -10,13 +10,17 @@
     @include md{
         grid-template-columns: 12% auto 12%;
     }
+
+    @include xxl{
+        grid-template-columns: auto 1440px auto;
+    }
     
     >div{
         grid-area: about;
 
         @include xl{
             display: grid;
-            grid-template-columns: auto auto;
+            grid-template-columns: 50% auto;
             gap: 136px;
         }
     }
