--- a/dev/scss/sections/_request.scss
+++ b/dev/scss/sections/_request.scss
@@ -10,6 +10,14 @@
         grid-template-columns: 12% auto 12%;
    }
 
+   @include xl{
+    grid-template-columns: 20% auto 20%;
+   }
+
+   @include xxl{
+    grid-template-columns: auto 1440px auto;
+   }
+
     >div{
         grid-area: request;
     }
