--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -18,10 +18,17 @@ $screen-xl-min: 1200px;
 // Extra large desktops
 $screen-xxl-min: 1440px;
 
-
-// Colors vars
+/* ==========
+CSS Variables
+==========*/
 :root {
+// Colors vars
   --black: #000000;
   --white: #ffffff;
+  --purple: #5B61A2;
+  --gray: #AEB3B7;
+
+  //grid sizes
+  --grid-margin-mobile: 16px;
 }
 
