--- a/dev/scss/sections/_about.scss
+++ b/dev/scss/sections/_about.scss
@@ -4,7 +4,7 @@
 
 #about{
     display: grid;
-    grid-template-columns: 16px auto 16px;
+    grid-template-columns: var(--grid-margin-mobile) auto var(--grid-margin-mobile);
     grid-template-areas: ". about .";
 
     @include md{
@@ -17,6 +17,10 @@
     
     >div{
         grid-area: about;
+
+        h1{
+            margin-bottom: 16px;     
+        }
 
         @include xl{
             display: grid;
