--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -2,3 +2,36 @@
     Header
 ============= */
 
+header{
+    padding: 16px 0;
+
+    @include xxl{
+        padding: 24px 0;
+    }
+
+    div{
+        display: flex;
+        
+        div{
+
+        }
+        nav{
+            margin-left: auto;
+            ul{
+                display: none;
+
+                @include md{
+                    display: flex;
+                }
+            }
+            button{
+                border: none;
+                background-color: transparent;
+
+                @include md{
+                    display: none;
+                }
+            }
+        }
+    }
+}
